--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "basiclightbox": "^5.0.4",
+    "bootstrap": "^5.0.0-beta3",
     "handlebars": "^4.7.7",
     "material-design-icons": "^3.0.1",
     "modern-normalize": "^1.1.0",
